--- a/index.html
+++ b/index.html
@@ -1,5 +1,21 @@
-"Hello World" 
+<!-- FILEPATH: /D:/temp/lingnet.github.io/index.html -->
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My Website</title>
+</head>
+<body>
+    <h1>Hello World</h1>
 
-testing
-2:25 PM 2/22/2019
+    <p>testing</p>
+    <p>2:25 PM 2/22/2019</p>
 
+    <img src="path/to/your/image.jpg" alt="Description of the image">
+
+    <footer>
+        <p>Best Regards,</p>
+        <p>Aaron Lee</p>
+        <p>Email: <a href="mailto:aaron.lee3@outlook.com">aaron.lee3@outlook.com</a></p>
+    </footer>
+</body>
+</html>
